--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,8 @@ sky:
     access-key-id: LTAI5tQEAuo9yY4iige3XdE5
     access-key-secret: 9VeWpOpA6y5OzwuoT1EXibr4GNxvz0
     bucket-name: java-ai-study-itheima
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
